Always scroll to bottom

--- a/web/src/app/components/chat/messages/messages.component.html
+++ b/web/src/app/components/chat/messages/messages.component.html
@@ -2,7 +2,7 @@
     <div class="chat-header">
         <p>Header</p>
     </div>
-    <div class="chat-body">
+    <div #messageBody class="chat-body">
         <ul>
             <li *ngFor="let chat of receivedMessages">{{ chat?.message }}</li>
         </ul>
