Added login page

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 <!-- <h1>uChat</h1> -->
-
-<app-chat></app-chat>
+<!-- <div class="main-container"> -->
+    <router-outlet></router-outlet>
+<!-- </div> -->
+<!-- <app-chat></app-chat> -->
 
