--- a/web/src/app/components/chat/chat.component.html
+++ b/web/src/app/components/chat/chat.component.html
@@ -1,2 +1,4 @@
-<app-list></app-list>
-<app-messages></app-messages>
+<div class="chat-container">
+    <app-list></app-list>
+    <app-messages></app-messages>
+</div>
