--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,30 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
-html,
-body {
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    margin: 0;
-    display: flex;
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-app-root {
-   flex: 1;
-   display: flex;
-   
-    app-chat {
-        flex: 1;
-        display: flex;
-
-        app-list {
-            width: 400px;
-            padding: 1rem;
-            border-right: 1px solid #ddd;
-        }
-
-        app-messages {
-            flex: 1;
-            display: flex;
-        }
-    }
+* {
+  box-sizing: border-box;
 }
