--- a/web/src/app/components/chat/list/list.component.html
+++ b/web/src/app/components/chat/list/list.component.html
@@ -1,1 +1,17 @@
-<p>list works!</p>
+<div class="chat-list-container">
+    <header class="header-area">
+        <div class="profile-preview">
+            <div class="profile-img">
+                <!-- <img src="../../../../favicon.ico" alt=""> -->
+                <span class="profile-placeholder">DY</span>
+            </div>
+            <div class="desc">
+                <span class="username">Dominic yegon</span>
+                <span class="caption">Being crazy</span>
+            </div>
+        </div>
+    </header>
+    <section class="contact-section">
+
+    </section>
+</div>
