--- a/web/src/app/components/account/login/login.component.scss
+++ b/web/src/app/components/account/login/login.component.scss
@@ -17,6 +17,7 @@
   .login-container h2 {
     text-align: center;
     margin-bottom: 30px;
+    color: #0747a6;
   }
 
   .form-group {
@@ -39,7 +40,7 @@
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    background-color: #007bff;
+    background-color: #0747a6;
     color: #fff;
     border: none;
     border-radius: 4px;
