Chat page design and authentication

--- a/web/src/app/components/chat/messages/messages.component.html
+++ b/web/src/app/components/chat/messages/messages.component.html
@@ -1,11 +1,52 @@
 <div class="chat-container">
-    <div class="chat-header">
-        <p>Header</p>
-    </div>
+    <header class="chat-header">
+        <div class="profile-preview">
+            <div class="profile-img">
+                <img src="../../../../favicon.ico" alt="">
+            </div>
+            <div class="desc">
+                <span class="username">Dominic yegon</span>
+                <span class="caption">Being crazy</span>
+            </div>
+        </div>
+    </header>
     <div #messageBody class="chat-body">
-        <ul>
+
+        <div class="container">
+
+            <div class="time">
+                <span>11:24 AM</span>
+            </div>
+            <div class="message-card receiver">
+                <span>Hello sir</span>
+            </div>
+            <div class="message-card sender">
+                <span>Yes, Hi?</span>
+            </div>
+            <div class="message-card sender">
+                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad eum dolore sed, veniam magni cupiditate asperiores iusto fugit repellat sapiente?</span>
+            </div>
+            <div class="message-card receiver">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quo, veniam culpa ab possimus commodi ea rem, molestias est fugiat illum omnis consequuntur eos animi aperiam nam ut beatae porro iusto! Amet, minus assumenda. Nulla provident illum dolorum beatae perferendis.</span>
+            </div>
+            <div class="message-card sender">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum minima, saepe aliquam officiis aspernatur amet harum cum modi! A minus doloribus deserunt alias odio beatae magni quo impedit voluptate! Est voluptatem tenetur, ab ratione error quod vero facere atque enim dolorem aspernatur quo corporis fuga tempora ipsum eius, amet quaerat fugiat numquam praesentium in impedit. Vero veniam veritatis vitae non nemo expedita quisquam facere sequi. Perferendis officia tenetur ducimus voluptate temporibus doloremque corporis ea saepe. Modi rerum dolorem dolorum, iste possimus saepe, itaque tempora quam doloribus ex perferendis mollitia! Accusantium sed et animi cupiditate velit maxime numquam reprehenderit beatae pariatur quaerat, temporibus, necessitatibus quos? Praesentium laborum, culpa aspernatur amet fugit soluta temporibus illo. Et voluptatem accusantium corporis labore quam perspiciatis!</span>
+            </div>
+
+            <div class="message-card receiver">
+                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia harum odio molestiae ab dolores eos quo doloremque laudantium, corporis iusto molestias? Amet, quia omnis perferendis obcaecati, corrupti dolore exercitationem quidem distinctio placeat, a ullam odit voluptates fuga enim tempore nihil. Obcaecati quis veritatis ea assumenda! Quidem assumenda illum quis iusto nulla deleniti veritatis natus pariatur iste eos. Pariatur natus aperiam dolore consequuntur quas animi consequatur voluptatem delectus! Assumenda, maxime! Veritatis beatae voluptatum ut maiores illo porro nesciunt reiciendis quisquam culpa nam, sequi natus doloribus aperiam, sunt magnam asperiores minima iusto tenetur et in ipsam minus sint! Nam dolorum distinctio unde, tempore eius recusandae aspernatur voluptatum quibusdam assumenda harum consequuntur odit tenetur quia ratione eum veniam quisquam atque debitis. Accusamus aliquam tempora aliquid dolore repellendus voluptates corporis molestiae impedit natus quibusdam. Dignissimos vitae soluta vero a fugit ex ipsam officiis nobis eum iusto molestiae, voluptatibus nisi. Enim, dignissimos molestiae sed aliquam magnam natus? Voluptatum nesciunt explicabo fuga molestias dolorum eveniet veritatis. Cumque, ipsum qui quae sit pariatur, similique consequuntur iusto incidunt reiciendis deserunt voluptas. Obcaecati architecto tempore iure! Natus perspiciatis quisquam, esse laborum illum quidem repellendus repudiandae illo eaque perferendis quae delectus iure voluptates, voluptatem magnam voluptatibus asperiores vel consequuntur mollitia labore maiores explicabo ut! Cupiditate, numquam ratione voluptas optio officia alias dolore nulla voluptatibus consectetur nobis debitis quod error, quae voluptatum! Ab consectetur cum, aliquid obcaecati deleniti aspernatur, earum commodi distinctio dolor voluptate iste architecto consequatur accusamus. Provident ipsum eveniet voluptatum nihil, eum earum deleniti blanditiis tenetur repellat libero quis sequi commodi dolorum ipsa hic alias doloribus corrupti quaerat ea nostrum! Perferendis temporibus dolore dolor eveniet vero sunt, quam, sequi asperiores atque amet expedita minima, eaque quod iure dolores. Nisi laborum debitis magnam odit ab nobis ut. Labore, doloremque corrupti! Aperiam ut quidem quaerat modi voluptatibus aspernatur dignissimos, qui rem?</span>
+            </div>
+
+            <div class="message-card">
+                <span class="typing dot-1"></span>
+                <span class="typing dot-2"></span>
+                <span class="typing dot-3"></span>
+            </div>
+
+        </div>
+        <!-- <ul>
             <li *ngFor="let chat of receivedMessages">{{ chat?.message }}</li>
-        </ul>
+        </ul> -->
     </div>
     <div class="chat-footer">
         <div class="input-container">
