--- a/web/src/app/components/chat/chat.component.scss
+++ b/web/src/app/components/chat/chat.component.scss
@@ -9,7 +9,8 @@
   height: 100%;
   app-list {
     width: 400px;
-    border-right: 1px solid #ddd;
+    // border-right: 2px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 
   app-messages {
