--- a/web/src/app/components/chat/list/list.component.scss
+++ b/web/src/app/components/chat/list/list.component.scss
@@ -53,5 +53,86 @@
         overflow-x: hidden;
         overflow-y: auto;
         padding: 0;
+        scrollbar-width: thin; /* For Firefox */
+        scrollbar-color: #ddd #f4f4f4;
+        cursor: pointer;
+
+        &::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #ddd;
+            border-radius: 15px;
+        }
+
+        .contact-card {
+            display: flex;
+            border-bottom: 1px solid #e9edef;
+            padding: 1rem;
+
+            &:hover {
+                background-color: #ecf9ff;
+            }
+
+            &:active,
+            &:focus {
+                background-color: #d3efff;
+            }
+
+            .avatar {
+                width: 50px;
+                height: 50px;
+                background-color: #fff;
+                border-radius: 50%;
+                // border: 1px solid #ccc;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    object-fit: cover;
+                    flex: 1;
+                }
+            }
+
+            .details {
+                flex: 1;
+                margin-left: 8px;
+                overflow: hidden;
+
+                .name-and-time {
+                    display: flex;
+                    .full-name {
+                        flex: 1;
+                        display: block;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        font-weight: 500;
+                        color: #111b21;
+                        line-height: 1.5;
+                        font-size: 17px;
+                    }
+
+
+                    .last-message-time {
+                        display: block;
+                        margin-left: 5px;
+                        color: #667781;
+                    }
+                }
+
+                .last-message {
+                    display: block;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    color: #667781;
+                    font-size: 14px;
+                }
+            }
+        }
     }
 }
