--- a/web/src/app/components/chat/messages/messages.component.scss
+++ b/web/src/app/components/chat/messages/messages.component.scss
@@ -4,8 +4,43 @@
     flex-direction: column;
 
     .chat-header {
-        padding: 1rem;
+        padding: 10px 1rem;
         border-bottom: 1px solid #ddd;
+
+        .profile-preview {
+            display: flex;
+            align-items: center;
+
+            .profile-img {
+                width: 45px;
+                height: 45px;
+                background-color: #fff;
+                border-radius: 50%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    object-fit: cover;
+                    flex: 1;
+                }
+            }
+
+            .desc {
+                margin-left: 10px;
+
+                .username {
+                    display: block;
+                    font-size: 15px;
+                    font-weight: 600;
+                }
+                .caption {
+                    display: block;
+                    font-size: 12px;
+                }
+            }
+        }
     }
 
     .chat-body {
@@ -13,7 +48,10 @@
         padding: 1rem;
         overflow-y: auto;
         overflow-x: hidden;
-
+        background-color: #F7F7F7;
+        box-shadow: 
+			inset 0 2rem 2rem -2rem rgba(black, 0.05),
+			inset 0 -2rem 2rem -2rem rgba(black, 0.05);
         &::-webkit-scrollbar {
             width: 7px;
         }
@@ -21,6 +59,55 @@
         &::-webkit-scrollbar-thumb {
             background-color: #8d8a8a;
             border-radius: 15px;
+        }
+
+        .time {
+            font-size: 0.8rem;
+			background: #EEE;
+			padding: 0.25rem 1rem;
+			border-radius: 2rem;
+			color: #999;
+			width: fit-content;
+			margin: 0 auto;
+        }
+
+        .message-card {
+            box-sizing: border-box;
+			padding: 0.5rem 1rem;
+			margin: 1rem;
+			background: #FFF;
+			border-radius: 1.125rem 1.125rem 1.125rem 0;
+			min-height: 2.25rem;
+			width: fit-content;
+			max-width: 66%;
+			box-shadow: 
+				0 0 2rem rgba(black, 0.075),
+				0rem 1rem 1rem -1rem rgba(black, 0.1);
+            
+            &.sender {
+                margin: 1rem 1rem 1rem auto ;
+				border-radius: 1.125rem 1.125rem 0 1.125rem;
+				background: #b1e4ff;
+
+            }
+
+            .typing {
+				display: inline-block;
+				width: 0.8rem;
+				height: 0.8rem;
+				margin-right: 5px;
+				box-sizing: border-box;
+				background: #ccc;
+				border-radius: 50%;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+				
+				&.dot-1 { animation: typing 3s infinite }
+				&.dot-2 { animation: typing 3s 250ms infinite }
+				&.dot-3 { animation: typing 3s 500ms infinite }
+            }
         }
     }
 
@@ -88,4 +175,17 @@
             border-radius: 15px;
         }
     }
+}
+
+
+@keyframes typing {
+	0%, 75%, 100% {
+		transform: translate(0, 0.25rem) scale(0.9);
+		opacity: 0.5;
+	}
+	
+	25% {
+		transform: translate(0, -0.25rem) scale(1);
+		opacity: 1;
+	}
 }
