Added feature to get and list messages

--- a/web/src/app/components/chat/chat.component.html
+++ b/web/src/app/components/chat/chat.component.html
@@ -1,4 +1,20 @@
 <div class="chat-container">
-    <app-list></app-list>
-    <app-messages></app-messages>
+    <app-list [messages]="contacts" (chatEmitter)="viewChat($event)"></app-list>
+    <app-messages *ngIf="isViewChat" [selectedChat]="selectedChat" (sendMessageEmitter)="sendMessage($event)"></app-messages>
+
+    <div *ngIf="!isViewChat" class="landing-page">
+        <div class="container">
+            <header class="header">
+                <div class="profile-preview">
+                    <div class="profile-img">
+                        <img src="../../../../favicon.ico" alt="">
+                    </div>
+                    <div class="desc">
+                        <span class="welcome">Welcome</span>
+                        <span class="username">{{user?.fullName}}</span>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </div>
 </div>
