--- a/web/src/app/components/chat/list/list.component.scss
+++ b/web/src/app/components/chat/list/list.component.scss
@@ -75,6 +75,7 @@
                 background-color: #ecf9ff;
             }
 
+            &.active,
             &:active,
             &:focus {
                 background-color: #d3efff;
