--- a/web/src/app/components/chat/messages/messages.component.scss
+++ b/web/src/app/components/chat/messages/messages.component.scss
@@ -80,11 +80,12 @@
 			min-height: 2.25rem;
 			width: fit-content;
 			max-width: 66%;
+            word-wrap: break-word;
 			box-shadow: 
 				0 0 2rem rgba(black, 0.075),
 				0rem 1rem 1rem -1rem rgba(black, 0.1);
             
-            &.sender {
+            &.outgoing {
                 margin: 1rem 1rem 1rem auto ;
 				border-radius: 1.125rem 1.125rem 0 1.125rem;
 				background: #b1e4ff;
