Added util to convert uuid to base62 Added sent time to message

--- a/web/src/app/components/chat/chat.component.html
+++ b/web/src/app/components/chat/chat.component.html
@@ -10,11 +10,29 @@
                         <img src="../../../../favicon.ico" alt="">
                     </div>
                     <div class="desc">
-                        <span class="welcome">Welcome</span>
+                        <span class="welcome">Hi</span>
                         <span class="username">{{user?.fullName}}</span>
                     </div>
                 </div>
             </header>
+            <section class="content-section">
+                <div class="col-md-12 info">
+                    <h3>Welcome to uChat</h3>
+                    <p>Connect, Communicate, Collaborate - Your Ultimate Chat Experience</p>
+                </div>
+                <div class="col-md-12 info">
+                    <h3>🚀 Why Choose uChat</h3>
+                    <p>Transform your communication with uChat, the feature-rich, user-friendly chat app designed for seamless collaboration.</p>
+                </div>
+                <div class="col-md- info">
+                    <h3>🌐 Connect Anywhere, Anytime</h3>
+                    <p>Stay in touch with friends, family, and colleagues effortlessly. Our app is accessible on multiple devices, ensuring you're connected wherever life takes you.</p>
+                </div>
+                <div class="col-md-12 info">
+                    <h3>💬 Feature-Packed Messaging</h3>
+                    <p>Experience next-level messaging with a suite of features. From text and multimedia messages to voice and video calls, [Your Chat App Name] has you covered.</p>
+                </div>
+            </section>
         </div>
     </div>
 </div>
