--- a/web/src/app/components/chat/messages/messages.component.scss
+++ b/web/src/app/components/chat/messages/messages.component.scss
@@ -22,7 +22,8 @@
                 align-items: center;
 
                 img {
-                    object-fit: cover;
+                    object-fit: contain;
+                    width: 100%;
                     flex: 1;
                 }
             }
@@ -73,23 +74,40 @@
 
         .message-card {
             box-sizing: border-box;
-			padding: 0.5rem 1rem;
 			margin: 1rem;
-			background: #FFF;
-			border-radius: 1.125rem 1.125rem 1.125rem 0;
 			min-height: 2.25rem;
 			width: fit-content;
 			max-width: 66%;
-            word-wrap: break-word;
-			box-shadow: 
-				0 0 2rem rgba(black, 0.075),
-				0rem 1rem 1rem -1rem rgba(black, 0.1);
+
+                .message-body {
+                    padding: 0.5rem 1rem;
+                    background: #FFF;
+                    border-radius: 1.125rem 1.125rem 1.125rem 0;
+                    word-wrap: break-word;
+                    box-shadow: 
+                        0 0 2rem rgba(black, 0.075),
+                        0rem 1rem 1rem -1rem rgba(black, 0.1);
+
+                }
+
+                .sent-time {
+                    float: left;
+                    font-size: 0.8rem;
+                    color: #999;
+                    padding: 0.25rem 0;
+                }
             
             &.outgoing {
                 margin: 1rem 1rem 1rem auto ;
-				border-radius: 1.125rem 1.125rem 0 1.125rem;
-				background: #b1e4ff;
 
+                .message-body {
+                    border-radius: 1.125rem 1.125rem 0 1.125rem;
+                    background: #b1e4ff;
+                }
+
+                .sent-time {
+                    float: right;
+                }
             }
 
             .typing {
