--- a/web/src/app/components/chat/list/list.component.scss
+++ b/web/src/app/components/chat/list/list.component.scss
@@ -136,7 +136,8 @@
             align-items: center;
 
             img {
-                object-fit: cover;
+                object-fit: contain;
+                width: 100%;
                 flex: 1;
             }
         }
