Added api to upload files Added registration page

--- a/web/src/app/components/chat/chat.component.html
+++ b/web/src/app/components/chat/chat.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-12 info">
                     <h3>💬 Feature-Packed Messaging</h3>
-                    <p>Experience next-level messaging with a suite of features. From text and multimedia messages to voice and video calls, [Your Chat App Name] has you covered.</p>
+                    <p>Experience next-level messaging with a suite of features. From text and multimedia messages to voice and video calls, uChat has you covered.</p>
                 </div>
             </section>
         </div>
