--- a/web/src/app/components/account/login/login.component.html
+++ b/web/src/app/components/account/login/login.component.html
@@ -25,6 +25,6 @@
       <a href="#">Forgot Password?</a>
     </div>
     <div class="registration-link">
-      <p>Don't have an account? <a href="#">Register</a></p>
+      <p>Don't have an account? <a [routerLink]="['/register']">Register</a></p>
     </div>
   </div>
