Added retry to websocket when backend is down

--- a/web/src/app/components/chat/messages/messages.component.html
+++ b/web/src/app/components/chat/messages/messages.component.html
@@ -22,7 +22,8 @@
                     <span>{{chat?.message}}</span>
                 </div>
                 <div class="sent-time">
-                    <span>{{chat.sentAt | date: 'shortTime'}}</span>
+                    <i class="fa fa-check" aria-hidden="true" style="margin-right: 5px;"></i>
+                    <span>{{chat.sentAt | date: 'HH:mm'}}</span>
                 </div>
             </div>
 
