Added an email service Send activation link via email created activation page

--- a/web/src/app/components/account/register/register.component.scss
+++ b/web/src/app/components/account/register/register.component.scss
@@ -51,3 +51,18 @@
     text-align: center;
     margin-top: 10px;
   }
+
+  .success-info {
+    text-align: center;
+    img {
+      width: 70px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+        text-align: center;
+        margin-bottom: 30px;
+        color: #0747a6;
+    }
+  }
