--- a/web/src/app/components/account/login/login.component.html
+++ b/web/src/app/components/account/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="login-container">
     <h2>Login</h2>
+    <div *ngIf="errorMessage" class="alert alert-danger text-center mb-2">
+      {{errorMessage}}
+    </div>
     <form [formGroup]="loginForm" (ngSubmit)="login()">
       <div class="form-group">
         <label for="username">Username:</label>
@@ -27,4 +30,4 @@
     <div class="registration-link">
       <p>Don't have an account? <a [routerLink]="['/register']">Register</a></p>
     </div>
-  </div>
+</div>
