--- a/web/src/app/components/account/register/register.component.html
+++ b/web/src/app/components/account/register/register.component.html
@@ -1,6 +1,11 @@
 <div class="register-container">
+  <div *ngIf="!isRegisteredSuccessfully">
     <h2>Register</h2>
-    <form [formGroup]="registerForm" (ngSubmit)="register()"><div class="form-group">
+    <div *ngIf="errorMessage" class="alert alert-danger text-center mb-2">
+      {{errorMessage}}
+    </div>
+    <form [formGroup]="registerForm" (ngSubmit)="register()">
+      <div class="form-group">
         <label for="fullName">Full name:</label>
         <input type="text" formControlName="fullName" class="form-control" id="fullName" placeholder="e.g John doe">
         <div class="mt-2" *ngIf="(fullName?.dirty || fullName?.touched) && fullName?.invalid">
@@ -38,3 +43,9 @@
       <p>Already have an account? <a [routerLink]="['/login']" >Login</a></p>
     </div>
   </div>
+  <div *ngIf="isRegisteredSuccessfully" class="success-info">
+    <img src="assets/icons/checked.png" alt="Success">
+        <h2>You have registered successfully</h2>
+        <p>Your account has been registered successfully. We have sent you an activation link to your email <strong>{{email?.value}}</strong>. Please follow the link to activate your account.</p>
+  </div>
+</div>
